# manapy

./: .a.c.swp  .gitignore  LICENCE  README.md  clean_cache.sh  pytest.ini  setup.py
.github/workflows/: test_manapy.yaml
Docker/: Dockerfile  build_image.sh  tests.sh
manapy/: __init__.py
manapy/ast/: __init__.py  ast_utils.py  core.py  functions2d.py  functions3d.py
manapy/backends/: __init__.py  base.py  types.py
manapy/base/: base.py
manapy/boundary/: __init__.py  bc.py  bc_utils.py
manapy/comms/: communication.py
manapy/ddm/: __init__.py  domain.py  (+6 more)
mesh/: #meshpaper2010-2.msh#  #meshpaper2010-3.msh#  Mesh200.geo  Mesh200.msh  Mesh2018.msh  carre.geo  carre.msh  carre_hybrid.msh  carre_structure.geo  carre_structure.msh  coriolismesh.msh  cube.geo  cube.msh  cube_bis.geo  cube_bis.msh  cube_mixt.geo  malpasset.msh  malpasset_python.msh  meshpaper2018.msh  rect.msh  rect_005.msh  rectangle.geo  rectangle.msh  rectangle_RTM.geo  rectangle_RTM.msh  rectangle_st.geo  rectangle_test.geo  ss.geo  test.geo
tests/domain/primary/manapy_domain/: CMakeLists.txt  domain_test.py
tests/domain/primary/manapy_domain/manapy_part/: build.sh  create_local_domain.cpp  create_local_domain_copy.cpp  create_sub_domains.py  example.py  manapy_domain.c  readme.md  setup.py
tests/domain/primary/manapy_domain/manapy_part/includes/: manapy_part.h
tests/domain/primary/manapy_domain/manapy_part/src/: py_manapy_part.cpp  utils.cpp
tests/domain/primary/manapy_domain/metis/: create_local_domain.cpp  main.c  setup.py
tests/domain/primary/manapy_domain/mpi_usage/: example.py
(+427 files in other folders)
